# Tarefas_API

./: Dockerfile  README.md  docker-compose.yaml  env.sample
back-end/: manage.py  mydatabase  pyproject.toml  requirements.txt
back-end/api_rest/: settings.py  urls.py  wsgi.py
back-end/static/: models.py
back-end/static/api/: viewset.py
back-end/static/migrations/: 0001_initial.py
back-end/tarefas/: apps.py  models.py
back-end/tarefas/api/: serializers.py  viewset.py
back-end/tarefas/migrations/: 0001_initial.py
django_rest/api_rest/: settings.py  urls.py
django_rest/tarefas/api/: serializers.py
front-end/: package-lock.json  package.json
front-end/src/: App.vue
front-end/src/components/: TarefaSalvar.vue  TarefasLista.vue
vue-http/: package-lock.json  package.json
vue-http/src/components/: TarefaSalvar.vue  TarefasLista.vue  TarefasListaIten.vue
vue-http/src/config/: config.js
