[tool.poetry]
name = "back-end"
version = "0.1.0"
description = ""
authors = ["José Bruno <jose.nascimento@shopee.com>"]
readme = "README.md"
packages = [{include = "back_end"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^2.2.3"
django-cors-headers = "^3.1.1"
python-dotenv = "^1.0.0"
djangorestframework = "^3.10.2"
psycopg2-binary = "^2.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
